--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="menu">
-<li><a href="#about">About Me</a></li>
+<li><a href="#about"> About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
 <li><a href="#playlist">My Playlist</a></li>
 <li><a href="#like">Like</a></li>
@@ -13,8 +13,15 @@
 <li><a href="#spa">Q&A</a></li>
 <li><a href="#contact">Contact Me</a></li>
 </div>
+
+
 		  
 <section id="about" class="section">
+  br/>
+  <br/>
+  <br/>
+  <br/>
+<br/><h1> <p >ברוכים הבאים לאתר שלי</p> </h1>
 <br/>
 <br/>
 <br/>
@@ -31,7 +38,7 @@
 <br/>
 <br/>
 <br/>
-about me
+<h1> <p class="dotted">About Me</p> </h1>
 <br/>
 <br/>
 <br/>
@@ -54,10 +61,19 @@ about me
 <br/>
 <br/>
 <br/>
-my photos
+<h1> <p class="dotted">My Photos</p> </h1>
 <br/>
+<br/><h1> <p > הנה כמה תמונות שלי</p> </h1>
 <br/>
+<img src=grandmandpa2.jpg width=500 height=500></img><br>
 <br/>
+<img src=grandmandpa2.jpg width=500 height=500></img><br>
+<br/>
+<img src=grandmandpa2.jpg width=500 height=500></img><br>
+<br/>
+<img src=grandmandpa2.jpg width=500 height=500></img><br>
+<br/>
+<audio src="dance.mp4" controls="controls">Your browser does not support the audio element.</audio>
 </section>
 
 <section id="playlist" class="section">
@@ -77,8 +93,12 @@ my photos
 <br/>
 <br/>
 <br/>
-my playlist
+<h1> <p class="dotted">My Playlist</p> </h1>
 <br/>
+<iframe width="990" height="557" src="https://www.youtube.com/embed/qYvgUDpcAeM" title="קובי ראובן - מחרוזת חי כמו פרפר 2021" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<br/>
+<iframe width="990" height="557" src="https://www.youtube.com/embed/WNlfrUsSPRY" title="קובי ראובן-בוייה(אבא סלח לי)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 <br/>
 <br/>
 </section>
@@ -100,7 +120,7 @@ my playlist
 <br/>
 <br/>
 <br/>
-give me a like
+<h1> <p class="dotted">Give Me A Like</p> </h1>
 <br/>
 <br/>
 <br/>
@@ -123,7 +143,7 @@ give me a like
 <br/>
 <br/>
 <br/>
-scan my code
+<h1> <p class="dotted">Scan My Code</p> </h1>
 <br/>
 <br/>
 <br/>
@@ -146,7 +166,7 @@ scan my code
 <br/>
 <br/>
 <br/>
-ans
+<h1> <p class="dotted">Ans</p> </h1>
 <br/>
 <br/>
 <br/>
@@ -169,8 +189,17 @@ ans
 <br/>
 <br/>
 <br/>
-contact me
+<h1> <p class="dotted">Contact Me</p> </h1>
 <br/>
+<form action="/action_page.php">
+  <p><label for="fname">First name:</label><br></p>
+  <p><input type="text" id="fname" name="fname" value="please enter your first name"><br></p>
+  <p><label for="lname">Last name:</label><br></p>
+  <p><input type="text" id="lname" name="lname" value="please enter your last name"><br><br></p>
+  <p><input type="submit" value="Submit"></p>
+</form> 
+
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 <br/>
 <br/>
 </section>
