--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 <br/>
 <h1> <p class="dotted">Scan My Code</p> </h1>
 <br/>
+<img src=QR.png width=500 height=500></img><br>
 <br/>
 <br/>
 </section>
