--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 <br/>
 <h1> <p class="dotted">Give Me A Like</p> </h1>
 <br/>
-<br/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v16.0" nonce="km8kdUIv"></script>
 <br/>
 </section>
 
@@ -145,7 +146,7 @@
 <br/>
 <h1> <p class="dotted">Scan My Code</p> </h1>
 <br/>
-<img src=QR.png width=500 height=500></img><br>
+<img src=QR.png width=350 height=350></img><br>
 <br/>
 <br/>
 </section>
@@ -203,6 +204,17 @@
 <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 <br/>
 <br/>
+
+<form action="mailto:edenluzon5@gmail.com" method="post" enctype="text/plain">
+  Name:<br>
+  <input type="text" name="name"><br>
+  E-mail:<br>
+  <input type="text" name="mail"><br>
+  Comment:<br>
+  <input type="text" name="comment" size="50"><br><br>
+  <input type="submit" value="Send">
+  <input type="reset" value="Reset">
+  </form>
 </section>
 
 
